Bone Collections: linking the armature from 3.6 doesn't create bone collections #111789

Closed
opened 2023-09-01 14:34:03 +02:00 by Christoph Lendenfeld · 2 comments

System Information
Operating system: Linux Mint
Graphics card: RTX 3070

Blender Version
Broken: 4.0
Worked: never

Short description of error
Linking the armature ID instead of the object containing the armature does not run the versioning code to create bone collections from layers and groups.

Exact steps for others to reproduce the error

  • Open 4.0
  • From the attached blend file link Armature->Armature
  • see no bone collections have been created

Preliminary analysis
The object doesn't exist when the versioning code is run (On an empty scene bmain->objects is empty)
Changing it to LISTBASE_FOREACH (bArmature *, arm, &bmain->armatures) does work for version_bonelayers_to_bonecollections
That only works if you don't need bPose which is on the object (for some reason)

**System Information** Operating system: Linux Mint Graphics card: RTX 3070 **Blender Version** Broken: 4.0 Worked: never **Short description of error** Linking the armature ID instead of the object containing the armature does not run the versioning code to create bone collections from layers and groups. **Exact steps for others to reproduce the error** * Open 4.0 * From the attached blend file link Armature->Armature * see no bone collections have been created **Preliminary analysis** The object doesn't exist when the versioning code is run (On an empty scene `bmain->objects` is empty) Changing it to `LISTBASE_FOREACH (bArmature *, arm, &bmain->armatures)` does work for `version_bonelayers_to_bonecollections` That only works if you don't need `bPose` which is on the object (for some reason)
Christoph Lendenfeld added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-01 14:34:04 +02:00

I can confirm the problem.
It looks like a bug in version_bonelayers_to_bonecollections which are versioning the objects instead of the armatures directly.
It was introduced in 998136f7a7 by @dr.sybren and @nathanvegdahl.

I can confirm the problem. It looks like a bug in `version_bonelayers_to_bonecollections` which are versioning the objects instead of the armatures directly. It was introduced in 998136f7a7 by @dr.sybren and @nathanvegdahl.

This is partially a technical limitation, and partially an oversight. If there is no object, there will not be bone groups, as these are stored in the pose data. The conversion of layers needs to use the armatures directly, though, so I'll address that for sure.

This is partially a technical limitation, and partially an oversight. If there is no object, there will not be bone groups, as these are stored in the pose data. The conversion of layers needs to use the armatures directly, though, so I'll address that for sure.
Sybren A. Stüvel added this to the Animation & Rigging project 2023-09-04 10:28:31 +02:00
Sybren A. Stüvel self-assigned this 2023-09-04 10:28:36 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-04 10:50:11 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111789
No description provided.