Fix #111789: Anim, bone collections not created when linking armature

Linking the armature ID directly, instead of the object containing the
armature, did not run the versioning code to create bone collections
from armature layers and bone groups.

Bone groups cannot be versioned into bone collections in this case, as
they only exist on the Object.

Bone layers are now properly versioned.